# mambavision_tf_kernel

./: .gitignore  CMakeLists.txt  Guía Completa Google Colab en VS Code.md  Informe de Contexto y Directrices del Proyecto_ MambaVision TF Kernel.md  compilador.ipynb  convert_weights.py  fix_nb.py  mamba_block.py  mamba_layer.py  mamba_ssm_bwd_kernel.cu  mamba_ssm_bwd_op.cc  mamba_ssm_kernel.cu  mamba_ssm_op.cc  mambavision_model.py  project_context.md  project_dev_context.md  setup_extensions.sh  skills-lock.json  zero_out.cc
MambaVision_Docs/: Análisis Arquitectónico y Matemático de MambaVision.md  Análisis Exhaustivo del Flujo de Tensores en la Arquitectura MambaVision.md  Implementación Selective Scan en TensorFlow.md  Migración PyTorch MambaVision a Keras.md
TFG_Capitulo_5_Borrador/: TFG_Capitulo_5_1_Desafio_Transicion.md  TFG_Capitulo_5_2_Abstraccion_Topologica.md  TFG_Capitulo_5_3_Bloque_MambaVision_Mixer.md  TFG_Capitulo_5_4_Modulos_Personalizados.md
archive/: mamba_ssm_grad.py
